--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "name": "prsms",
   "author": "tpscrpt",
-  "version": "0.1.0",
+  "license": "MIT",
+  "version": "0.1.1",
   "main": "index.js",
   "types": "index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tpscrpt/prsms.git"
+  },
   "dependencies": {
     "typescript": "^4.6.4"
   }
